packages/optimizer/core/src/snapshots/qwik_core__test__should_transform_multiple_block_scoped_variables_in_loop.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const arr = useSignal(['a', 'b'])
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i+1;
		const value = val.toUpperCase();
        return <div onClick$={() => console.log(value, index)}>{val}</div>
      })}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,2CAWZ\"}")
============================= test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps.js (ENTRY POINT)==

export const test_component_div_div_q_e_click_Mc600uqO6ps = (_, _1, index, value)=>console.log(value, index);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAU8B,QAFhB,OACN,QAC4B,QAAQ,GAAG,CAAC,OAAO\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_click_Mc600uqO6ps",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_click",
  "hash": "Mc600uqO6ps",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    277,
    308
  ],
  "paramNames": [
    "_",
    "_1",
    "index",
    "value"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_test_component_div_div_q_e_click_Mc600uqO6ps = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps"), "test_component_div_div_q_e_click_Mc600uqO6ps").m();
//
export const test_component_LUXeXe0DQrg = ()=>{
    const arr = useSignal([
        'a',
        'b'
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, arr.value.map((val, i)=>{
        const index = i + 1;
        const value = val.toUpperCase();
        return /*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": q_test_component_div_div_q_e_click_Mc600uqO6ps,
            "q:ps": [
                index,
                value
            ]
        }, null, val, 4, "u6_0");
    }), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;0CAG0B;IACxB,MAAM,MAAM,UAAU;QAAC;QAAK;KAAI;IAChC,qBACE,WAAC,mBACE,IAAI,KAAK,CAAC,GAAG,CAAC,CAAC,KAAK;QACnB,MAAM,QAAQ,IAAE;QACtB,MAAM,QAAQ,IAAI,WAAW;QACvB,qBAAO,WAAC;YAAI,WAAQ;;gBAFd;gBACN;;iBACwD;IAC1D;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    349
  ]
}
*/
== DIAGNOSTICS ==

[]
