packages/optimizer/core/src/snapshots/qwik_core__test__should_transform_multiple_event_handlers_case2.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(function() {
  const data = useSignal<Signal<any>[]>([]);
  return <div>
	{data.value.map((row, idx) => (
	  <div onClick$={() => console.log(row.value.id, idx)} onMouseOver$={() => console.log('over' + row.value.id)}>
		<p onClick$={() => console.log('inner' + row.value.id)}>{item.value.id}</p>
	  </div>
	))}
  </div>;
})

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_Foo_component_HTDRsvUbLiE = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_HTDRsvUbLiE"), "Foo_component_HTDRsvUbLiE");
//
/*#__PURE__*/ componentQrl(q_Foo_component_HTDRsvUbLiE);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;cAEY\"}")
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_Foo_component_div_div_p_q_e_click_PjMbeUzoAMk = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_p_q_e_click_PjMbeUzoAMk"), "Foo_component_div_div_p_q_e_click_PjMbeUzoAMk").m();
const q_Foo_component_div_div_q_e_click_vKrX4PmH2aM = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_q_e_click_vKrX4PmH2aM"), "Foo_component_div_div_q_e_click_vKrX4PmH2aM").m();
const q_Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y = /*#__PURE__*/ qrl(()=>import("./test.tsx_Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y"), "Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y").m();
//
export const Foo_component_HTDRsvUbLiE = function() {
    const data = useSignal([]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((row, idx)=>/*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": q_Foo_component_div_div_q_e_click_vKrX4PmH2aM,
            "q-e:mouseover": q_Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y,
            "q:ps": [
                row,
                idx
            ]
        }, null, /*#__PURE__*/ _jsxSorted("p", {
            "q-e:click": q_Foo_component_div_div_p_q_e_click_PjMbeUzoAMk,
            "q:p": row
        }, null, item.value.id, 4, null), 4, "u6_0")), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;;yCAEuB;IACrB,MAAM,OAAO,UAAyB,EAAE;IACxC,qBAAO,WAAC,mBACR,KAAK,KAAK,CAAC,GAAG,CAAC,CAAC,KAAK,oBACpB,WAAC;YAAI,WAAQ;YAAwC,eAAY;;gBADlD;gBAAK;;+BAErB,WAAC;YAAE,WAAQ;mBAFK;iBAEyC,KAAK,KAAK,CAAC,EAAE;AAIxE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    89,
    412
  ]
}
*/
============================= test.tsx_Foo_component_div_div_q_e_click_vKrX4PmH2aM.js (ENTRY POINT)==

export const Foo_component_div_div_q_e_click_vKrX4PmH2aM = (_, _1, row, idx)=>console.log(row.value.id, idx);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"2DAMkB,QADA,KAAK,MACC,QAAQ,GAAG,CAAC,IAAI,KAAK,CAAC,EAAE,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_q_e_click_vKrX4PmH2aM",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_click",
  "hash": "vKrX4PmH2aM",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_click_vKrX4PmH2aM",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    213,
    249
  ],
  "paramNames": [
    "_",
    "_1",
    "row",
    "idx"
  ]
}
*/
============================= test.tsx_Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y.js (ENTRY POINT)==

export const Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y = (_, _1, row)=>console.log('over' + row.value.id);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"+DAMsE,QADpD,MAC0D,QAAQ,GAAG,CAAC,SAAS,IAAI,KAAK,CAAC,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_q_e_mouseover",
  "hash": "P9F6Osn3X6Y",
  "canonicalFilename": "test.tsx_Foo_component_div_div_q_e_mouseover_P9F6Osn3X6Y",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onMouseOver$",
  "captures": false,
  "loc": [
    265,
    305
  ],
  "paramNames": [
    "_",
    "_1",
    "row"
  ]
}
*/
============================= test.tsx_Foo_component_div_div_p_q_e_click_PjMbeUzoAMk.js (ENTRY POINT)==

export const Foo_component_div_div_p_q_e_click_PjMbeUzoAMk = (_, _1, row)=>console.log('inner' + row.value.id);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"6DAOe,QAFG,MAEG,QAAQ,GAAG,CAAC,UAAU,IAAI,KAAK,CAAC,EAAE\"}")
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_div_div_p_q_e_click_PjMbeUzoAMk",
  "entry": null,
  "displayName": "test.tsx_Foo_component_div_div_p_q_e_click",
  "hash": "PjMbeUzoAMk",
  "canonicalFilename": "test.tsx_Foo_component_div_div_p_q_e_click_PjMbeUzoAMk",
  "path": "",
  "extension": "js",
  "parent": "Foo_component_HTDRsvUbLiE",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    323,
    364
  ],
  "paramNames": [
    "_",
    "_1",
    "row"
  ]
}
*/
== DIAGNOSTICS ==

[]
