packages/optimizer/core/src/snapshots/qwik_core__test__should_transform_same_element_one_handler_with_captures_one_without.snap
---
source: packages/optimizer/core/src/test.rs
expression: output
---
==INPUT==


import { component$, useSignal } from '@qwik.dev/core';

export default component$(() => {
  const arr = useSignal(['a', 'b']);
  return (
    <div>
      {arr.value.map((val, i) => {
        const index = i + 1;
        return (
          <div
            onClick$={() => console.log(index)}
            onKeyDown$={() => console.log('no capture')}
          >
            {val}
          </div>
        );
      })}
    </div>
  );
});

============================= test.js ==

import { componentQrl } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
//
const q_test_component_LUXeXe0DQrg = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_LUXeXe0DQrg"), "test_component_LUXeXe0DQrg");
//
export default /*#__PURE__*/ componentQrl(q_test_component_LUXeXe0DQrg);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;AAGA,6BAAe,2CAiBZ\"}")
============================= test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM.js (ENTRY POINT)==

export const test_component_div_div_q_e_keydown_a6RR59yQlXM = (_, _1)=>console.log('no capture');


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"8DAYwB,SAAM,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_keydown_a6RR59yQlXM",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_keydown",
  "hash": "a6RR59yQlXM",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onKeyDown$",
  "captures": false,
  "loc": [
    319,
    350
  ],
  "paramNames": [
    "_",
    "_1"
  ]
}
*/
============================= test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps.js (ENTRY POINT)==

export const test_component_div_div_q_e_click_Mc600uqO6ps = (_, _1, index)=>console.log(index);


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\"4DAWsB,QAHR,QAGc,QAAQ,GAAG,CAAC\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_div_div_q_e_click_Mc600uqO6ps",
  "entry": null,
  "displayName": "test.tsx_test_component_div_div_q_e_click",
  "hash": "Mc600uqO6ps",
  "canonicalFilename": "test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps",
  "path": "",
  "extension": "js",
  "parent": "test_component_LUXeXe0DQrg",
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    269,
    293
  ],
  "paramNames": [
    "_",
    "_1",
    "index"
  ]
}
*/
============================= test.tsx_test_component_LUXeXe0DQrg.js (ENTRY POINT)==

import { _jsxSorted } from "@qwik.dev/core";
import { qrl } from "@qwik.dev/core";
import { useSignal } from "@qwik.dev/core";
//
const q_test_component_div_div_q_e_click_Mc600uqO6ps = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_click_Mc600uqO6ps"), "test_component_div_div_q_e_click_Mc600uqO6ps").m();
const q_test_component_div_div_q_e_keydown_a6RR59yQlXM = /*#__PURE__*/ qrl(()=>import("./test.tsx_test_component_div_div_q_e_keydown_a6RR59yQlXM"), "test_component_div_div_q_e_keydown_a6RR59yQlXM");
//
export const test_component_LUXeXe0DQrg = ()=>{
    const arr = useSignal([
        'a',
        'b'
    ]);
    return /*#__PURE__*/ _jsxSorted("div", null, null, arr.value.map((val, i)=>{
        const index = i + 1;
        return /*#__PURE__*/ _jsxSorted("div", {
            "q-e:click": q_test_component_div_div_q_e_click_Mc600uqO6ps,
            "q:p": index
        }, {
            "q-e:keydown": q_test_component_div_div_q_e_keydown_a6RR59yQlXM
        }, val, 4, "u6_0");
    }), 1, "u6_1");
};


Some("{\"version\":3,\"sources\":[\"/user/qwik/src/test.tsx\"],\"names\":[],\"mappings\":\";;;;;;;0CAG0B;IACxB,MAAM,MAAM,UAAU;QAAC;QAAK;KAAI;IAChC,qBACE,WAAC,mBACE,IAAI,KAAK,CAAC,GAAG,CAAC,CAAC,KAAK;QACnB,MAAM,QAAQ,IAAI;QAClB,qBACE,WAAC;YACC,WAAQ;mBAHN;;YAIF,aAAU;WAET;IAGP;AAGN\"}")
/*
{
  "origin": "test.tsx",
  "name": "test_component_LUXeXe0DQrg",
  "entry": null,
  "displayName": "test.tsx_test_component",
  "hash": "LUXeXe0DQrg",
  "canonicalFilename": "test.tsx_test_component_LUXeXe0DQrg",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    437
  ]
}
*/
== DIAGNOSTICS ==

[]
